--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "my-hono-project",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "x": "npx prisma generate",
+    "start": "node ./dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "@prisma/client": "^6.4.1",
     "hono": "^4.7.2",
-    "prisma": "^6.4.1",
+    "typescript": "^5.8.2",
     "xss": "^1.0.15",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "prisma": "^6.4.1",
+    "tsc": "^2.0.4",
     "tsx": "^4.7.1",
     "vitest": "^3.0.7"
   }
