--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "x": "npx prisma generate",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "test": "vitest run"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "cross-env": "^7.0.3",
     "prisma": "^6.4.1",
     "tsx": "^4.7.1",
     "vitest": "^3.0.7"
