--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "x": "npx prisma generate",
     "start": "node ./dist/index.js",
-    "test": "vitest run"
+    "test": "cross-env NODE_ENV=test vitest run"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
