--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/node": "^20.11.17",
     "cross-env": "^7.0.3",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "prisma": "^6.4.1",
     "tsx": "^4.7.1",
+    "typescript-eslint": "^8.26.0",
     "vitest": "^3.0.7"
   }
 }
